src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>AdditionalContactFields__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-2301 reference to Additional Contact Fields object for this Contact record</description>
        <inlineHelpText>Reference to Additional Contact Fields object for this Contact record</inlineHelpText>
        <label>Additional Contact Fields</label>
        <referenceTo>AdditionalContactFields__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContactCountry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-384 This field serves as a lookup to the Country object</description>
        <inlineHelpText>Read-only field, updated indirectly by a change of Company&apos;s Billing Country</inlineHelpText>
        <label>Contact Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContactGeography__c</fullName>
        <description>SFDC1-384 Read-only field referencing Contact Country&apos;s geography</description>
        <formula>TEXT(ContactCountry__r.Geography__c)</formula>
        <inlineHelpText>Read-only field referencing Contact Country&apos;s geography</inlineHelpText>
        <label>Contact Geography</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactRegion__c</fullName>
        <description>SFDC1-384 Read-only field referencing Contact Country&apos;s region</description>
        <formula>TEXT(ContactCountry__r.Region__c)</formula>
        <inlineHelpText>Read-only field referencing Contact Country&apos;s region</inlineHelpText>
        <label>Contact Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EloquaHardBounce__c</fullName>
        <description>SFDC1-8576: This field is populated by the Eloqua integration and indicates the last date that a hardbounce from the email address</description>
        <inlineHelpText>Last date that a hard-bounce from the email address</inlineHelpText>
        <label>Eloqua Hard Bounce</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EmailOptOutTimeStamp__c</fullName>
        <description>SFDC1- 452; Date/time field which is populated by Email Opt Out</description>
        <label>Email Opt Out Time Stamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EmailOptOut__c</fullName>
        <description>SFDC1 - 452 : Picklist value which will be populated by Lead
SFDC1-7608 : Updated the Picklist values</description>
        <label>Email Opt Out</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Global Email Opt Out</fullName>
                </value>
                <value>
                    <fullName>Country Email Exclusion (ie CASL/GDPR)</fullName>
                </value>
                <value>
                    <fullName>CASL Exclude</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>GDPR Exclude</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Opt Out</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EmailUnknown__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-530 Allow user to enter a contact who will not provide their email address. When this field is checked, Business phone field is required. If this field is unchecked, email is mandatory.</description>
        <inlineHelpText>Please check this box if contact&apos;s email address is unknown. A phone number will be required in that case.</inlineHelpText>
        <label>Email Unknown</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EmployeeID__c</fullName>
        <description>SFDC1-1359 This field will be used specifically for IHSM employees and populated through the IHSM Contact integration with the AD ID. The AD ID is being used because an employee number and name/email may change over time. No validation is needed on the field since it will be populated through the integration.SFDC1-8656 : Marking this as External Id field</description>
        <externalId>true</externalId>
        <label>Employee ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GroupDesk__c</fullName>
        <description>SFDC1-799 Legacy Markit field, the desk or area the contact works in the institution</description>
        <inlineHelpText>If a suitable Group/Desk cannot be found please contact your Salesforce Administrator.</inlineHelpText>
        <label>Group/Desk</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Alternative Investments</fullName>
                </value>
                <value>
                    <fullName>Arbitrage</fullName>
                </value>
                <value>
                    <fullName>Asset Management</fullName>
                </value>
                <value>
                    <fullName>Auditor</fullName>
                </value>
                <value>
                    <fullName>Clearing</fullName>
                </value>
                <value>
                    <fullName>Clearing/Back Office</fullName>
                </value>
                <value>
                    <fullName>Clearing &amp; Custody</fullName>
                </value>
                <value>
                    <fullName>Commodities Desk</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>Consultant</fullName>
                </value>
                <value>
                    <fullName>Convertible Desk</fullName>
                </value>
                <value>
                    <fullName>Corporate Broking</fullName>
                </value>
                <value>
                    <fullName>Corporate Finance</fullName>
                </value>
                <value>
                    <fullName>Corporate Sales</fullName>
                </value>
                <value>
                    <fullName>Corporate Trading</fullName>
                </value>
                <value>
                    <fullName>Correlation Desk</fullName>
                </value>
                <value>
                    <fullName>Credit</fullName>
                </value>
                <value>
                    <fullName>Credit Research</fullName>
                </value>
                <value>
                    <fullName>Credit Risk</fullName>
                </value>
                <value>
                    <fullName>Credit Sales</fullName>
                </value>
                <value>
                    <fullName>Credit Trading</fullName>
                </value>
                <value>
                    <fullName>Custody</fullName>
                </value>
                <value>
                    <fullName>Data Feed Manager</fullName>
                </value>
                <value>
                    <fullName>Data Management</fullName>
                </value>
                <value>
                    <fullName>Derivative Desk</fullName>
                </value>
                <value>
                    <fullName>Derivatives Trader</fullName>
                </value>
                <value>
                    <fullName>E-Commerce</fullName>
                </value>
                <value>
                    <fullName>Economic Research</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GroupEmailFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-1831 This field is to be checked if email is a distribution list email like accountspayable@ihsmarkit.com, this field should be unchecked by default.</description>
        <label>Group Email Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InactiveReason__c</fullName>
        <description>SFDC1-200 Must be completed to mark the contact as inactive</description>
        <inlineHelpText>Required when status changed to inactive.</inlineHelpText>
        <label>Inactive Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account Inactive</fullName>
                </value>
                <value>
                    <fullName>Deceased</fullName>
                </value>
                <value>
                    <fullName>Moved On</fullName>
                </value>
                <value>
                    <fullName>Retired</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>No longer at account</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <description>SFDC1-1831 Pick list field from Marketing, this maps over from the lead conversion process and Eloqua Sync.</description>
        <inlineHelpText>Please select an Industry value.</inlineHelpText>
        <label>Industry</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Academic/Education</fullName>
                </value>
                <value>
                    <fullName>Aerospace &amp; Defense</fullName>
                </value>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>Air Transport</fullName>
                </value>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>Banking</fullName>
                </value>
                <value>
                    <fullName>Business Services/Consulting</fullName>
                </value>
                <value>
                    <fullName>Chemicals</fullName>
                </value>
                <value>
                    <fullName>Coal</fullName>
                </value>
                <value>
                    <fullName>Commodities Trading</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Electronics</fullName>
                </value>
                <value>
                    <fullName>Energy Equipment</fullName>
                </value>
                <value>
                    <fullName>Energy Services</fullName>
                </value>
                <value>
                    <fullName>Financial/Asset Management</fullName>
                </value>
                <value>
                    <fullName>Food Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Local/State Government</fullName>
                </value>
                <value>
                    <fullName>Military/Security Government</fullName>
                </value>
                <value>
                    <fullName>National Government</fullName>
                </value>
                <value>
                    <fullName>Healthcare</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>Land Transport</fullName>
                </value>
                <value>
                    <fullName>Logistics &amp; Shipping</fullName>
                </value>
                <value>
                    <fullName>Maritime</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Metals/Mining</fullName>
                </value>
                <value>
                    <fullName>Non-Governmental Organizations (NGO)</fullName>
                </value>
                <value>
                    <fullName>Oil &amp; Gas</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Other Manufacturing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JobFunction__c</fullName>
        <description>SFDC1-1831 Pick list field from Marketing, this maps over from the lead conversion process and Eloqua Sync.</description>
        <label>Job Function</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Academic/Education</fullName>
                </value>
                <value>
                    <fullName>Analyst</fullName>
                </value>
                <value>
                    <fullName>Business Development/Sales</fullName>
                </value>
                <value>
                    <fullName>C-Suite Executives</fullName>
                </value>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>Corporate Services</fullName>
                </value>
                <value>
                    <fullName>Economist</fullName>
                </value>
                <value>
                    <fullName>Environmental Health Safety Sustainability</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Exploration &amp; Production</fullName>
                </value>
                <value>
                    <fullName>Financial/Investment</fullName>
                </value>
                <value>
                    <fullName>Geology</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Information Technology</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Librarian</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Procurement</fullName>
                </value>
                <value>
                    <fullName>Product/Project Management</fullName>
                </value>
                <value>
                    <fullName>Risk Management</fullName>
                </value>
                <value>
                    <fullName>Strategic Planning</fullName>
                </value>
                <value>
                    <fullName>Supply Chain</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JobTitle__c</fullName>
        <description>Creating Job Title as of SFDC1-863; Titles have been taken from Markit QA org</description>
        <inlineHelpText>If you are unable to find a suitable job title please contact your Salesforce Administrator</inlineHelpText>
        <label>Job Title</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Analyst</fullName>
                </value>
                <value>
                    <fullName>Assistant Vice President</fullName>
                </value>
                <value>
                    <fullName>Associate</fullName>
                </value>
                <value>
                    <fullName>CCO - Chief Compliance Officer</fullName>
                </value>
                <value>
                    <fullName>CDO - Chief Data Officer</fullName>
                </value>
                <value>
                    <fullName>CEO - Chief Executive Officer</fullName>
                </value>
                <value>
                    <fullName>CFO - Chief Financial Officer</fullName>
                </value>
                <value>
                    <fullName>Chief Analyst</fullName>
                </value>
                <value>
                    <fullName>CIO - Chief Investment Officer</fullName>
                </value>
                <value>
                    <fullName>COO - Chief Operating Officer</fullName>
                </value>
                <value>
                    <fullName>CTO - Chief Technology Officer</fullName>
                </value>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>Executive Director</fullName>
                </value>
                <value>
                    <fullName>Executive Vice President</fullName>
                </value>
                <value>
                    <fullName>Intern</fullName>
                </value>
                <value>
                    <fullName>Managing Director</fullName>
                </value>
                <value>
                    <fullName>Portfolio Manager</fullName>
                </value>
                <value>
                    <fullName>President</fullName>
                </value>
                <value>
                    <fullName>Senior Analyst</fullName>
                </value>
                <value>
                    <fullName>Senior Director</fullName>
                </value>
                <value>
                    <fullName>Senior Managing Director</fullName>
                </value>
                <value>
                    <fullName>Senior Vice President</fullName>
                </value>
                <value>
                    <fullName>Vice President</fullName>
                </value>
                <value>
                    <fullName>CRO - Chief Risk Officer</fullName>
                </value>
                <value>
                    <fullName>DirectorExecutive Director</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>InternManaging Director</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LegacyIDUnique__c</fullName>
        <description>SFDC1-7046: Legacy ID Unique field is a concatenation of the source system name and a source system record id to ensure record is uniquely identified.</description>
        <externalId>true</externalId>
        <inlineHelpText>This field store the concatenation of the source system name and a source system record id to ensure the record is uniquely identified.</inlineHelpText>
        <label>LegacyIDUnique</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LegacyID__c</fullName>
        <description>SFDC1-2445 : Legacy ID field for Contact Object</description>
        <externalId>true</externalId>
        <label>LegacyID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacySystem__c</fullName>
        <description>SFDC1-7046: Legacy System field is a picklist that represents the original system the record came from.</description>
        <inlineHelpText>Name of the CRM system the source record came from</inlineHelpText>
        <label>LegacySystem</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LegacySystem</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Licenses__c</fullName>
        <description>SFDC1-4329;It can be populated via the userxs integration for use by the marketing team to be passed to Eloqua.</description>
        <label>Licenses</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NumProductLoginContactAssociation__c</fullName>
        <description>SFDC1-6833: Number of related Product Login Contact Association</description>
        <inlineHelpText>Number of related Product Login Contact Association</inlineHelpText>
        <label>Number Product Login Contact Association</label>
        <summaryForeignKey>ProductLoginContactAssociation__c.Contact__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumberOfLicenses__c</fullName>
        <description>SFDC1-4329;It can be populated via the userxs integration for use by the marketing team to be passed to Eloqua.</description>
        <label>Number of Licenses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrgLevel__c</fullName>
        <description>SFDC1-1831 Pick list field from Marketing, this maps over from the lead conversion process and Eloqua Sync.</description>
        <label>Org Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Advisory</fullName>
                </value>
                <value>
                    <fullName>Board Member</fullName>
                </value>
                <value>
                    <fullName>CEO or President</fullName>
                </value>
                <value>
                    <fullName>CXO</fullName>
                </value>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>Non Management</fullName>
                </value>
                <value>
                    <fullName>Vice President</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PKIDContact__c</fullName>
        <description>SFDC1-2445 : Creating PK field for Data Migration Support</description>
        <displayFormat>Cnt{000000}</displayFormat>
        <externalId>true</externalId>
        <label>PKID Contact</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>PrimaryLanguage__c</fullName>
        <description>SFDC1-200 Contact&apos;s primary language</description>
        <inlineHelpText>Please select contact&apos;s primary language</inlineHelpText>
        <label>Primary Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Arabic</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Danish</fullName>
                </value>
                <value>
                    <fullName>Dutch</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
                <value>
                    <fullName>Portuguese</fullName>
                </value>
                <value>
                    <fullName>Russian</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProductUsageLast30days__c</fullName>
        <description>SFDC1-2446 Field for tracking product usage for the last 30 days</description>
        <inlineHelpText>Lists the product used for the last 30 days. Auto-calculated via the trigger.</inlineHelpText>
        <label>Product Usage Last 30 days</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ProductUsageLast60days__c</fullName>
        <description>SFDC1-2446 Field for tracking product usage for the last 60 days</description>
        <inlineHelpText>Lists the product used for the last 60 days. Auto-calculated via a trigger.</inlineHelpText>
        <label>Product Usage Last 60 days</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ProductUsageLast90days__c</fullName>
        <description>SFDC1-2446 Field for tracking product usage for the last 90 days</description>
        <inlineHelpText>Lists the product used for the last 90 days. Auto-calculated via a trigger.</inlineHelpText>
        <label>Product Usage Last 90 days</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ProspectProfiler__c</fullName>
        <description>SFDC1-4815: Call Prospect Profiler field will build a URL which will provide access to the Prospect profiler information in Eloqua.</description>
        <formula>HYPERLINK(&quot;https://login.eloqua.com/cvp?LoginPrefix=IHSE&amp;Username=Profiler.User&amp;Password=999645ce-a4ad-472d-9255-59602b503e98,DE1FF21F17416652504F15E859ACB2CA69D4BB52BCC14C633D97A0645D1BC7D6C99CD3AC92492336029C210AF9252AED67F6C18E3FF99DE34E67D53D9A9BA5BB36469BCB3C338CD697FFAB0194E17E25&amp;Url=apps/profiler/index.aspx?emailAddress=&quot;&amp; Email,&quot;Click here for Prospect Profiler Info&quot;)</formula>
        <inlineHelpText>Prospect Profiler</inlineHelpText>
        <label>Prospect Profiler</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>SFDC1-200 Determines if the Contact is active or inactive</description>
        <inlineHelpText>Please select contact&apos;s status</inlineHelpText>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllActiveContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.PHONE1</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>All Active Contacts</label>
    </listViews>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.PHONE1</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>AllInactiveContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.PHONE1</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Inactive</value>
        </filters>
        <label>All Inactive Contacts</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.PHONE1</columns>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>BlockProhibitedCountry</fullName>
        <active>true</active>
        <description>SFDC1-384 Do not allow a Contact record to be created if the Contact&apos;s country is a Prohibited Country</description>
        <errorConditionFormula>VLOOKUP( $ObjectType.Country__c.Fields.IsProhibited__c ,  $ObjectType.Country__c.Fields.Name, MailingCountry)</errorConditionFormula>
        <errorDisplayField>MailingCountry</errorDisplayField>
        <errorMessage>Due to U.S. export controls and sanctions restrictions, Contact records cannot be created for the selected country.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ContactInactiveReason_Validation</fullName>
        <active>true</active>
        <description>Required when status changed to inactive</description>
        <errorConditionFormula>ISPICKVAL(Status__c, &quot;Inactive&quot;)
&amp;&amp;  ISBLANK(TEXT(InactiveReason__c))</errorConditionFormula>
        <errorMessage>Please select an inactive reason to change the contact&apos;s status to &quot;Inactive&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EmailRequired</fullName>
        <active>true</active>
        <description>When [Email Unknown] is not checked, Email Address is required.</description>
        <errorConditionFormula>EmailUnknown__c  = false
&amp;&amp;   Email = null</errorConditionFormula>
        <errorDisplayField>Email</errorDisplayField>
        <errorMessage>Please enter Email address or check the Email Unknown box (a business phone number will be required in that case).</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EmailUnknownThenPhoneRequired</fullName>
        <active>true</active>
        <description>When [Email Unknown] is checked, Business phone field is required.</description>
        <errorConditionFormula>EmailUnknown__c  = true
&amp;&amp;  Phone  = null</errorConditionFormula>
        <errorDisplayField>Phone</errorDisplayField>
        <errorMessage>Please enter Business Phone when Email is unknown.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FirstNameRequired</fullName>
        <active>true</active>
        <description>SFDC1-749 Make First Name a required field</description>
        <errorConditionFormula>FirstName = null</errorConditionFormula>
        <errorDisplayField>FirstName</errorDisplayField>
        <errorMessage>Please enter contact&apos;s first name</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>InactiveContactUpdate_Validation</fullName>
        <active>false</active>
        <description>Only allow edit on active contacts.
Any field other than the status change can&apos;t be updated for inactive contact.
SFDC1-6833: Bypassing this validation to allow SF Admin user to update inactive contacts</description>
        <errorConditionFormula>ISPICKVAL (Status__c, &quot;Inactive&quot;)
&amp;&amp; !ISCHANGED(Status__c) 
&amp;&amp;  NOT(  CONTAINS($User.FirstName + &apos; &apos;+ $User.LastName, &apos;SF Admin&apos;))</errorConditionFormula>
        <errorMessage>Inactive contact cannot be edited. Please change the contact status to &quot;Active&quot; to update other values.</errorMessage>
    </validationRules>
</CustomObject>